--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ credentials.json
 
 # Knowledge Directory
 /knowledge/*
+!/knowledge/dummy.txt  # ダミーファイルを除外しない
+!/knowledge/README.md  # READMEファイルを除外しない
