--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,39 +1,2 @@
-steps:
-  # Step 1: Dockerイメージをビルド
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build',
-      '-t',
-      '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPO_NAME}/${_SERVICE_NAME}:latest',
-      '.'
-    ]
-
-  # Step 2: Artifact Registryにプッシュ
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'push',
-      '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPO_NAME}/${_SERVICE_NAME}:latest'
-    ]
-
-  # Step 3: Cloud Runにデプロイ
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args: [
-      'run', 'deploy', '${_SERVICE_NAME}',
-      '--image', '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPO_NAME}/${_SERVICE_NAME}:latest',
-      '--region', '${_LOCATION}',
-      '--allow-unauthenticated',
-      '--service-account', '${_SERVICE_ACCOUNT_EMAIL}',
-      '--set-env-vars', 'GCP_PROJECT=$PROJECT_ID'
-    ]
-
-images:
-  - '${_LOCATION}-docker.pkg.dev/$PROJECT_ID/${_REPO_NAME}/${_SERVICE_NAME}:latest'
-
-substitutions:
-  _LOCATION: asia-northeast1
-  _REPO_NAME: my-app-repo
-  _SERVICE_NAME: ai-calendar-assistant
-  _SERVICE_ACCOUNT_EMAIL: ''
-
-timeout: '1200s'
+# このファイルは不要になりました。GitHub Actions + Workload Identity Federation方式に移行済みです。
+# デプロイは .github/workflows/deploy.yml で自動化されています。
