--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
 name: Deploy to Google Cloud Run
 
 on:
-  push:
-    branches:
-      - main  # mainブランチにプッシュされたら実行
+  # push:
+  #   branches:
+  #     - main  # mainブランチにプッシュされたら実行
+  workflow_dispatch:
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
